Thu May 24 18:29:43 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/dcps_tests.lst:
          Added Deadline test with rtps_disc

        * tests/DCPS/Deadline/publisher.cpp:
        * tests/DCPS/Deadline/subscriber.cpp:
          Updated domain id in order to run with rtps

Thu May 24 18:19:45 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/Deadline/rtps_disc.ini:
          Added ini file which I forgot

Thu May 24 18:05:37 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/DCPS/Deadline/Deadline.mpc:
        * tests/DCPS/Deadline/run_test.pl:
        * tests/DCPS/Deadline/subscriber.cpp:
          Trying to get this test running with rtps, committing my changes
          until now

Thu May 24 12:39:03 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:
        * examples/DCPS/ishapes/main.cpp:
          Fixed typos

Fri May 18 21:10:33 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DdsDcps.mpc:

          List the *TypeSupportImpl.cpp files as needed for the 'idl_stubs'
          target.  This is used by the script that measures static footprint.

Fri May 18 17:38:27 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/idl/dds_generator.h:
        * dds/idl/marshal_generator.cpp:

          Leave out the name of the parameter for gen_is_bounded_size().
          This removes the necessity for ACE_UNUSED_ARG, which may be seen as
          a read of uninitialized data by Coverity.

Fri May 18 15:50:29 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/shmem/ShmemReceiveStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemSendStrategy.cpp:
        * dds/DCPS/transport/shmem/ShmemTransport.cpp:

          Fixed compiler and coverity warnings.

Thu May 17 16:02:14 UTC 2012  Adam Mitz  <mitza@ociweb.com>

        * tests/DCPS/LargeSample/LargeSample.mpc: