@@ -95,7 +95,7 @@ int parse_args (int argc, ACE_TCHAR *argv[])
       arg_shifter.ignore_arg ();
     }
   }
-  // Indicates sucessful parsing of the command line
+  // Indicates successful parsing of the command line
   return 0;
 }
 
